--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images\logo.png">
+  <link rel="icon" href="images/logo.png">
 
   <script src="https://kit.fontawesome.com/21928d0fbf.js" crossorigin="anonymous"></script>
 
@@ -52,7 +52,7 @@
           <p class="sub-text">Get inspired by thousands of beautiful color palettes that fit your any need.</p>
         </div>
         <div class="col-lg-6 img-1">
-          <img class="color-palette-img" src="images\color-selection.png" alt="color-palette-img">
+          <img class="color-palette-img" src="images/color-selection.png" alt="color-palette-img">
         </div>
       </div>
 
@@ -195,7 +195,7 @@
     <div class="container-fluid">
       <h1 class="heading">What are Color Palettes ?</h1>
       <p class="sub-text">A color palette is a combination of colors used by UI designers when designing an interface which helps to maintain consistency, and make your user interface aesthetically pleasing and enjoyable to use.</p>
-      <img class="theory-img" src="images\color-card.png" alt="color-cards-img">
+      <img class="theory-img" src="images/color-card.png" alt="color-cards-img">
     </div>
 
   </section>
@@ -203,7 +203,7 @@
   <section class="white" id="types">
 
     <div class="container-fluid" id="type-box">
-      <img class="types-img" src="images\colored-pencils.png" alt="types-img">
+      <img class="types-img" src="images/colored-pencils.png" alt="types-img">
       <h1 class="heading types-heading">Types of Color Palettes</h1>
       <p class="sub-text types-sub-text">There are several types of color palettes that can be used in your design, but broadly there are four main types.</p>
 
@@ -214,22 +214,22 @@
             <p class="sub-text">A monochromatic color palette is a color palette in which a single color tint is used as the basis for all shades and hues found within the image. The shade of color is varied by changes made to the saturation and/or brightness of the
               base color.
             </p>
-            <img class="w-75" src="images\monochromatic.png" alt="monochromatic-img">
+            <img class="w-75" src="images/monochromatic.png" alt="monochromatic-img">
           </div>
           <div class="carousel-item">
             <h3 class="heading">2. Analogous Color Palettes</h3>
             <p class="sub-text">An analogous color palette involves grouping of colors that neighbor each on the color wheel i.e. colors that are positioned next to each other on the color wheel. For instance, if you choose the color blue, you other blue shades around it.</p>
-            <img class="w-75" src="images\analogous.png" alt="analogous-img">
+            <img class="w-75" src="images/analogous.png" alt="analogous-img">
           </div>
           <div class="carousel-item">
             <h3 class="heading">3. Complementary Color Palettes</h3>
             <p class="sub-text">A complementary color palette is composed by using two colors which are opposite to each other on the color wheel. This is the particularly contrasting of all color schemes which attracts the most attention.</p>
-            <img class="w-75" src="images\complementary.png" alt="complementary-img">
+            <img class="w-75" src="images/complementary.png" alt="complementary-img">
           </div>
           <div class="carousel-item">
             <h3 class="heading">4. Triadic Color Palettes</h3>
             <p class="sub-text">A triadic color scheme is comprised of three colors evenly spaced on the color wheel. The two most basic triadic palettes are the primary colors red, blue, and yellow, and the secondary hues orange, purple, and green.</p>
-            <img class="w-75" src="images\triadic.png" alt="traidic-img">
+            <img class="w-75" src="images/triadic.png" alt="traidic-img">
           </div>
         </div>
         <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselEx" data-bs-slide="prev">
